Description : modified action layout Bug ID: NA Reviewed By: Sanjay

--- a/technical/src/apps/user/patientcare/src/app/modules/patient-management/action/action.component.css
+++ b/technical/src/apps/user/patientcare/src/app/modules/patient-management/action/action.component.css
@@ -56,21 +56,23 @@
 .float-btn-cat-text {
     color: #ffffff;
     font-size: 17;
-    opacity: 1;
+    color: rgba(255,255,255,1);
+    /* opacity: 1; */
     /* background-color: red;
     padding: 5; */
 }
 
 
 .float-btn-cat {
-    background-color: #6e6e6e;
-    /* border-radius: 3px; */
-    border-radius:22;
-    width: 44;
-    height: 44;
+    /* background-color: #696969; */
+    border-radius: 3px;
+    /* border-radius:22; */
+    width: 23;
+    height: 23;
     text-align: center;
     vertical-align: middle;
-    opacity:0.7;
+    /* opacity:0.7; */
+    background-color: rgb(105, 105, 105, 0.6);
 }
 
 .category-header {
